# mujoco_rgbd_sim

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
example/: empty_scene.xml  simple_camera.py
mujoco_rgbd_sim/: __init__.py  empty_scene.py  geometric_objects.py  mujoco_camera.py  mujoco_scene_builder.py  mujoco_sim.py
