[project]
name = "mujoco-rgbd-sim"
version = "0.1.0"
description = "MuJoCo RGBD Camera Simulation"
authors = [{ name = "deankh" }]
dependencies = [
  "mujoco>=3.0.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "transforms3d>=0.4.2",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mujoco_rgbd_sim"]

[tool.uv]
dev-dependencies = ["jupyter>=1.0.0", "ruff>=0.12.5"]
